Themed the start, stop, reset buttons for the time tracker timer

--- a/time_sheet/css/time_sheet.css
+++ b/time_sheet/css/time_sheet.css
@@ -1,6 +1,7 @@
 /* $Id$ */
 
 .show-case { display:none; }
+.secret-submit {display:none;}
 
 #case-details-monday,
 #case-details-tuesday,
@@ -12,3 +13,13 @@
 .time-sheet-case { margin-left:5px; }
 .case-details { margin:10px 0 5px 0; padding:10px; border:1px solid #ccc; background-color:#eee; }
 .time-sheet-header { font-size:20px; color:#ccc; line-height:30px; }
+
+#features-menu li a.time_sheet_link span.icon {
+  background:url(images/time-tracker-icon-large.png) no-repeat 0 0;
+  display:block;
+  float:left;
+  height:40px;
+  width:40px;
+}
+
+
