--- a/css/time_tracker_timer.css
+++ b/css/time_tracker_timer.css
@@ -18,3 +18,71 @@ table.time_tracker_timer tr.user_unsaved_timer_msg {
   background-color: #fef4cb;
 }
 
+table.time_tracker_timer {
+  background-color: #f8f8f8;
+}
+
+table.time_tracker_timer td {
+  vertical-align: middle;
+}
+
+table.time_tracker_timer td.timer_time {
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+  text-align: center;
+}
+
+td.timer_control {
+  width: 165px;
+}
+
+td.timer_msg {
+  color: #666666;
+  padding: 5px 10px 15px 15px;
+}
+
+td.timer_time {
+  font-size: 30px;
+  width: 150px;
+}
+
+td.timer_control input {
+  color: white;
+  font-weight: normal;
+  font-size: 18px;
+  padding: 0 0 3px 15px;
+  width: 162px;
+  height: 44px;
+  border: none;
+  cursor:pointer;
+  text-align:center;
+  overflow: hidden;
+}
+
+input.form-timer_control_start {
+  background: url("images/start_timer_button.png") no-repeat 0 0;
+}
+
+input.form-timer_control_stop {
+  background: url("images/stop_timer_button.png") no-repeat 0 0;
+}
+
+input.form-timer_control_reset {
+  background: url("images/reset_timer_button.png") no-repeat 0 0;
+}
+
+td.new_timer_time {
+  color: #a5a5a5;
+}
+
+td.active_timer_time{
+  color:#333333;
+}
+
+td.stopped_timer_time  {
+  color: #45b200;
+}
+
+
+
+
