Issue #1077394 by atrofast: Feature request fulfilled. Added ability to lock time entries, preventing further editing.

--- a/time_sheet/css/time_sheet.css
+++ b/time_sheet/css/time_sheet.css
@@ -1,3 +1,4 @@
+/* $Id$ */
 
 .show-case { display:none; }
 .secret-submit {display:none;}
@@ -13,8 +14,8 @@
 .case-details { margin:10px 0 5px 0; padding:10px; border:1px solid #ccc; background-color:#eee; }
 .time-sheet-header { font-size:20px; color:#ccc; line-height:30px; }
 
-.hidden {
+/*.hidden {
   display:none;
-}
+}*/
 
 
